# assistant

./: README.md  pyproject.toml
src/: listen.py  main.py  speak.py
src/actions/: __init__.py  ai_prompt.py  joke.py  stock.py  time.py  websearch.py  weekday.py
src/adapters/: __init__.py  command_ai.py  command_crypto.py  command_currency.py  command_stock.py  command_websearch.py
src/consts/: const.py
src/processor/: input_processor.py
