[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["gal16v8d"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
yfinance = "^1.2.0"
selenium = "^4.41.0"
speechrecognition = "^3.15.1"
pyjokes = "^0.8.3"
pyttsx3 = "^2.99"
pyaudio = "^0.2.14"
google-genai = "^1.68.0"
pillow = "^12.1.1"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
