[project]
name = "assistant"
version = "0.1.0"
description = ""
authors = [
    { name = "gal16v8d" }
]
readme = "README.md"
requires-python = ">=3.14,<3.15"

dependencies = [
    "yfinance>=1.3.0",
    "selenium>=4.43.0",
    "speechrecognition>=3.16.1",
    "pyjokes>=0.8.3",
    "pyttsx3>=2.99",
    "pyaudio>=0.2.14",
    "google-genai>=1.75.0",
    "pillow>=12.2.0"
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "black>=26.3.1"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
